src/snapshots/git_stager__diff__tests__format_diff_mixed_operations.snap
---
source: src/diff.rs
expression: formatted
---
gtk.nix:
  -10:	    gtk.theme.name = "Adwaita";
  -11:	    gtk.iconTheme.name = "Papirus";
  +10:	    # Theme managed by Stylix
  +11:	    gtk.iconTheme.name = "Papirus-Dark";
  +12:	    gtk.cursorTheme.size = 24;
