src/snapshots/git_stager__diff__tests__format_diff_multiple_files.snap
---
source: src/diff.rs
expression: formatted
---
flake.nix:
  +137:	      debug = true;

zsh.nix:
  -15:	      enableAutosuggestions = true;
