src/snapshots/git_stager__diff__tests__format_diff_non_contiguous_hunks.snap
---
source: src/diff.rs
expression: formatted
---
flake.nix:
  +137:	      debug = true;

  +142:	        ./flake-modules/home-manager.nix
