src/snapshots/git_stager__diff__tests__format_diff_single_deletion.snap
---
source: src/diff.rs
expression: formatted
---
zsh.nix:
  -15:	      enableAutosuggestions = true;
